# loom

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  playwright.config.js
benchmarks/tapestry/: CMakeLists.txt
benchmarks/tapestry/ai_llm/: CMakeLists.txt  attn_output.c  attn_score.c  ffn1.c  ffn2.c  gelu.c  layernorm.c  llm_taskgraph_common.h  qkv_proj.c  softmax.c  taskgraph_decoder.cpp  taskgraph_kvcache.cpp  taskgraph_moe.cpp  tdg_transformer.py
benchmarks/tapestry/arvr_stereo/: harris_corner.c  image_warp.c  post_filter.c  sad_matching.c  stereo_disparity.c  tdg_stereo.py
benchmarks/tapestry/common/: complex.h  csr_graph.h  fixed_point.h  graph_gen.py  input_gen.py  tile_utils.h
benchmarks/tapestry/dsp_ofdm/: channel_est.c  crc_check.c  equalizer.c  fft_butterfly.c  qam_demod.c  tdg_ofdm.py  viterbi.c
benchmarks/tapestry/graph_analytics/: bfs_traversal.c  label_prop.c  pagerank_spmv.c  tdg_graph.py  triangle_count.c
benchmarks/tapestry/robotics_vio/: fast_detect.c  feature_match.c  imu_integration.c  orb_descriptor.c  pose_estimate.c  tdg_vio.py
benchmarks/tapestry/zk_stark/: goldilocks.h  m31_arith.h  msm.c  ntt.c  poly_eval.c  poseidon_hash.c  proof_compose.c  tdg_stark.py
lib/fcc/ADG/: ADGBuilder.cpp  ADGBuilderCore.cpp  ADGBuilderEmit.cpp  ADGBuilderTopology.cpp  ADGBuilderViz.cpp  ADGVerifier.cpp  CMakeLists.txt
lib/fcc/Mapper/: ADGFlattener.cpp  ADGFlattenerContext.h  ADGFlattenerWiring.cpp  BridgeBinding.cpp  CMakeLists.txt  ConfigGen.cpp  ConfigGenConfig.cpp  ConfigGenHelpers.cpp  ConfigGenInternal.h  ConfigGenMapJsonTail.cpp  ConfigGenReportHelpers.cpp  ConfigGenText.cpp  DFGBuilder.cpp  Graph.cpp  Mapper.cpp  MapperCPSat.cpp  MapperCongestionEstimator.cpp  MapperCongestionEstimator.h  MapperInterleaved.cpp  MapperInternal.h  MapperLocalRepair.cpp  MapperLocalRepairEndgame.cpp  MapperLocalRepairExact.cpp  MapperLocalRepairHotspot.cpp  MapperLocalRepairInternal.h  MapperLocalRepairMemory.cpp  MapperOptions.cpp  MapperPlacement.cpp  MapperPlacementMethods.cpp  MapperRefinement.cpp  MapperRelaxedRouting.cpp  MapperRouting.cpp  MapperRoutingCongestion.cpp  MapperRoutingCongestion.h  MapperRoutingInternal.h  MapperRoutingStrategy.cpp  MapperSentinels.cpp  MapperTiming.cpp  MappingState.cpp  OpCompat.cpp  (+7 more)
lib/fcc/SVGen/: CMakeLists.txt  SVEmitter.cpp  SVGen.cpp  SVGenConfigLayout.cpp  SVGenFU.cpp  SVGenFUValidation.cpp  SVGenInternal.h  SVGenPE.cpp  SVGenTop.cpp  SVModuleRegistry.cpp
lib/fcc/Simulator/: CMakeLists.txt  CycleBackend.cpp  CycleKernel.cpp  CycleKernelExecution.cpp  CycleKernelMemory.cpp  FunctionalBackend.cpp  FunctionalBackendImpl.h  FunctionalBackendOps.cpp  PortTraceExporter.cpp  RuntimeImage.cpp  RuntimeImageBinary.cpp  RuntimeImageBuilder.cpp  SimArtifactWriter.cpp  SimBundle.cpp  SimFunctionUnit.cpp  SimFunctionUnitCore.cpp  SimFunctionUnitStateful.cpp  SimInputSynthesis.cpp  SimMemory.cpp  SimModule.cpp  SimSession.cpp  SimStats.cpp  SimTemporalPE.cpp  SimTypes.cpp  StaticModel.cpp  StaticModelBuilder.cpp
lib/fcc/Viz/: CMakeLists.txt  GenAssets.cmake  VizExporter.cpp  VizExporterADG.cpp  VizExporterDFG.cpp  VizExporterInternal.h  VizExporterLayout.cpp  renderer.css  renderer.js
lib/loom/: CMakeLists.txt
lib/loom/ADG/: ADGBuilderCore.cpp  ADGBuilderEmit.cpp  ADGBuilderNoCPorts.cpp  ADGBuilderTopology.cpp  ADGBuilderViz.cpp  ADGVerifier.cpp  CMakeLists.txt  KHGGenerator.cpp  SystemADGBuilder.cpp  (+1 more)
lib/tapestry/: CMakeLists.txt  ParetoTracker.cpp  ablation_runner.cpp  auto_analyze.cpp  auto_analyze_bridge.cpp  co_optimizer.cpp  compile.cpp  derived_metrics.cpp  host_scheduler.cpp  task_graph.cpp  tdg_emitter.cpp  tdg_optimizer.cpp
tests/: CMakeLists.txt
tests/.results/: mapper-app-domains.csv  mapper-app-summary.csv
tests/app/: .gitignore
tests/cmake/: clean-test-output.cmake
tests/docs/: error-alignment.py
tests/e2e/: CMakeLists.txt  run_e2e_tests.py
tests/frontend/: run_frontend_tests.sh  test_bitwise_ops.cpp  test_indirect_access.cpp  test_math_intrinsics.cpp  test_min_reduction.cpp  test_nested_conditional.cpp  test_predicated_accum.cpp  test_saturating_arith.cpp  test_select_control.cpp  test_sum_reduction.cpp  test_type_conversions.cpp
tests/mapper/: CMakeLists.txt
tests/mapper-app/: CMakeLists.txt
tests/rtl/: CMakeLists.txt  run_negative_tests.py  test_runner_accounting.py
tests/scripts/: adg_test.sh  check_bridge_tags.py  check_loom.sh  cmsis_compilation.sh  common.sh  dfg_analysis.sh  docs_check.sh  fabric_gen.sh  fabric_tdd.sh  handshake.sh  handshake_ops_stat.sh  lit_serial.sh  ll_roundtrip.sh  mapper_app.sh  mapper_app_test.sh  mapper_combine.sh  mapper_helpers.sh  mapper_smoke.sh  mapper_stress.sh  mapper_test.sh  mapper_unit.sh  mapper_unit_smoke.sh  mlir_roundtrip.sh  scf_roundtrip.sh  simulator_app.sh  simulator_validation.sh  spec_check.sh  sv_test.sh  vcs_helpers.sh  viz_serializer_check.py  viz_serializer_regression.py  viz_serializer_regression.sh  viz_test.sh
tests/spec/: addr-width-alignment.py  error-alignment.py  max-loc.py
tests/sv/: .gitignore
tests/unit/: CMakeLists.txt  run_unit_tests.py
tests/viz/: CMakeLists.txt
tools/fcc/: CMakeLists.txt  fcc.cpp  fcc_args.cpp  fcc_args.h  fcc_pipeline.cpp  fcc_pipeline.h  fcc_runtime.cpp  fcc_runtime.h  mapper_benchmark.py  mapper_config.cpp  mapper_config.h
tools/loom/: CMakeLists.txt  clean-loom.cmake  clean-tdd-output.cmake  loom.cpp  loom_adg_test.sh  loom_apps.sh  loom_args.cpp  loom_args.h  loom_exe_roundtrip.sh  loom_handshake.sh  loom_handshake_ops-stat.sh  loom_ll_roundtrip.sh  loom_mlir_apps.sh  loom_mlir_roundtrip.sh  loom_pipeline.cpp  loom_pipeline.h  loom_runtime.cpp  loom_runtime.h  loom_scf_apps.sh  loom_scf_roundtrip.sh  mapper_benchmark.py  mapper_config.cpp  mapper_config.h
tools/tapestry/: CMakeLists.txt  tapestry_ablation_test.cpp  tapestry_adg_gen.cpp  tapestry_auto_analyze.cpp  tapestry_compile.cpp  tapestry_coopt_experiment.cpp  tapestry_e2e_test.cpp  tapestry_pipeline.cpp  tapestry_rtlgen.cpp  tapestry_sensitivity.cpp  tapestry_sim_test.cpp  tapestry_simulate.cpp
(+2945 files in other folders)
